--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,27 @@
 <resources>
     <string name="app_name">FinalProject4</string>
+
     <string-array name="pricelist">
         <item>Popular</item>
         <item>High to Low</item>
         <item>Low to High</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="listTempat">
+        <item>Balikpapan</item>
+        <item>Samarida</item>
+        <item>Bontang</item>
+        <item>Badak</item>
+        <item>Sanga-Sanga</item>
+    </string-array>
+    <string name="title_activity_detail_payment">DetailPayment</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+
 </resources>
